syntax = "proto3";

package ai.metathings.service.identityd2;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message AuthorizeTokenRequest {
	OpEntity object = 1 [(validator.field) = {msg_exists: true}];
	OpAction action = 2 [(validator.field) = {msg_exists: true}];
}
